--- a/scinet-globe/index.html
+++ b/scinet-globe/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>SC17 Showfloor</title>
+  <title>SC17 Globe Connect</title>
 
   <link rel="stylesheet" href="style/style.css">
 </head>
