--- a/scinet-inner-network/index.html
+++ b/scinet-inner-network/index.html
@@ -23,6 +23,7 @@
 
 
   <script src="./data/countryCodes.js"></script>
+  <script src="./data/countryCodeFull.js"></script>
   <script src="./lib/d3.v4.min.js"></script>
   <script src="https://d3js.org/topojson.v1.min.js"></script>
   <script src="./lib/lodash.js"></script>
