globe working again, working on showfloor vis

--- a/scinet-globe/index.html
+++ b/scinet-globe/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>SC17 Globe Connect</title>
+  <title>SC18 Globe Connect</title>
 
   <link rel="stylesheet" href="style/style.css">
 </head>
@@ -17,7 +17,7 @@
   <div style="z-index: 500; position: absolute; top: 110px; left: 20px; color: #e34a33"> > 1Tb</div>
 
   <!-- https://github.com/AndrewTBurks/SCinet17 -->
-<div style="z-index: 500; position: absolute; bottom: 20px; left: 20px; color: #41b6c4"> https://github.com/AndrewTBurks/SCinet17 (scinet-globe)</div>
+<div style="z-index: 500; position: absolute; bottom: 20px; left: 20px; color: #41b6c4"> https://github.com/AndrewTBurks/SCinet (scinet-globe)</div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/88/three.min.js"></script>
   <script src="https://d3js.org/topojson.v1.min.js"></script>
