More work on showfloor vis

--- a/scinet-showfloor/index.html
+++ b/scinet-showfloor/index.html
@@ -10,14 +10,17 @@
   <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-  <div style="z-index: 500; position: absolute; top: 20px; left: 20px;">Showfloor Traffic</div>
-  <div style="z-index: 500; position: absolute; top: 70px; left: 20px; color: #fdcc8a"> > 1MB</div>
-  <div style="z-index: 500; position: absolute; top: 90px; left: 20px; color: #fc8d59"> > 1GB</div>
-  <div style="z-index: 500; position: absolute; top: 50px; left: 20px; color: #fef0d9"> > 1KB</div>
-  <div style="z-index: 500; position: absolute; top: 110px; left: 20px; color: #e34a33"> > 1TB</div>
+  <div style="z-index: 500; position: absolute; top: 20px; left: 20px;">Showfloor and Global Traffic
+  
+    <div style="z-index: 500; display: inline-block; color: #fef0d9; margin-left: 2vmin;">
+      <span style="display: inline-block; width: 1.8vmin; height: 1.8vmin; background: #fef0d9"></span> 1Kb</div>
+    <div style="z-index: 500; display: inline-block; color: #fdcc8a"> <span style="display: inline-block; width: 1.8vmin; height: 1.8vmin; background: #fdcc8a"></span> 1Mb</div>
+    <div style="z-index: 500; display: inline-block; color: #fc8d59"> <span style="display: inline-block; width: 1.8vmin; height: 1.8vmin; background: #fc8d59"></span> 1Gb</div>
+    <div style="z-index: 500; display: inline-block; color: #e34a33"> <span style="display: inline-block; width: 1.8vmin; height: 1.8vmin; background: #e34a33"></span> 1Tb</div>
+  </div>
 
   <!-- https://github.com/AndrewTBurks/SCinet17 -->
-  <div style="z-index: 500; position: absolute; bottom: 0px; left: 20px; color: #41b6c4"> https://github.com/AndrewTBurks/SCinet (scinet-showfloor)</div>
+  <div style="z-index: 500; position: absolute; bottom: 1vmin; left: 1vmin; color: #41b6c4; font-size: 2vmin;"> https://github.com/AndrewTBurks/SCinet (scinet-showfloor)</div>
 
   <svg id="root"></svg>
 
