--- a/scinet-globe/index.html
+++ b/scinet-globe/index.html
@@ -10,11 +10,13 @@
 </head>
 <body>
  <!-- ['#fef0d9', '#fdcc8a', '#fc8d59', '#e34a33'] -->
-  <div style="z-index: 500; position: absolute; top: 20px; left: 20px;">Top 20 Global Flows</div>
-  <div style="z-index: 500; position: absolute; top: 50px; left: 20px; color: #fef0d9"> > 1Kb</div>
-  <div style="z-index: 500; position: absolute; top: 70px; left: 20px; color: #fdcc8a"> > 1Mb</div>
-  <div style="z-index: 500; position: absolute; top: 90px; left: 20px; color: #fc8d59"> > 1Gb</div>
-  <div style="z-index: 500; position: absolute; top: 110px; left: 20px; color: #e34a33"> > 1Tb</div>
+  <div style="z-index: 500; position: absolute; top: 20px; left: 20px;">Top 20 Global Flows
+
+    <div style="z-index: 500; display: inline-block; color: #fef0d9"> > 1Kb</div>
+    <div style="z-index: 500; display: inline-block; color: #fdcc8a"> > 1Mb</div>
+    <div style="z-index: 500; display: inline-block; color: #fc8d59"> > 1Gb</div>
+    <div style="z-index: 500; display: inline-block; color: #e34a33"> > 1Tb</div>
+  </div>
 
   <!-- https://github.com/AndrewTBurks/SCinet17 -->
 <div style="z-index: 500; position: absolute; bottom: 20px; left: 20px; color: #41b6c4"> https://github.com/AndrewTBurks/SCinet (scinet-globe)</div>
